Update and rename love.html to a.html

--- a/a.html
+++ b/a.html
@@ -17,19 +17,19 @@
   <body>
     <div class="pageContent">
       <div class="page">
-        <img src="page1.png" width="100%" height="100%" alt="" />
+        <img src="page1.png" width="100%" height="100%" alt="" loading="lazy" />
       </div>
       <div class="page">
-        <img src="page2.png" width="100%" height="100%" alt="" />
+        <img src="page2.png" width="100%" height="100%" alt="" loading="lazy" />
       </div>
       <div class="page">
-        <img src="page3.png" width="100%" height="100%" alt="" />
+        <img src="page3.png" width="100%" height="100%" alt="" loading="lazy" />
       </div>
       <div class="page">
-        <img src="page4.png" width="100%" height="100%" alt="" />
+        <img src="page4.png" width="100%" height="100%" alt="" loading="lazy" />
       </div>
       <div class="page">
-        <img src="page5.png" width="100%" height="100%" alt="" />
+        <img src="page5.png" width="100%" height="100%" alt="" loading="lazy" />
       </div>
     </div>
   </body>
